--- a/tfp/environment.yml
+++ b/tfp/environment.yml
@@ -1,4 +1,4 @@
-name: tfd
+name: tfp
 channels:
   - conda-forge
 dependencies:
@@ -21,5 +21,5 @@ dependencies:
   - pip
   - pip:
       - coffea
-      - tensorflow==2.0.0-rc1
-      - tensorflow_probability==0.8.0rc0
+      - tensorflow==2.0.0
+      - tensorflow_probability==0.8.0
